# zofia

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp  run-macos.sh  run.sh
code-style/: cpp_code_style.xml   cpp_ubuntu.xml
config/: Config.cpp  Constant.cpp  config.hpp
core/: Application.cpp  Color.cpp  Config.cpp  Constant.cpp  Game.cpp  Greeting.cpp  Position.cpp  Size.cpp  Util.cpp  core.hpp  hello.cpp  hello.h
core/audio/: AudioManager.cpp  Music.cpp  SoundEffect.cpp
core/config/: Config.cpp  Constant.cpp
core/logging/: BaseLogger.cpp  Logger.cpp
core/resource/: ResourceHolder.cpp  ResourceManager.cpp
core/state/: BlankState.cpp  HelloState.cpp  IntroState.cpp  MenuState.cpp  StateFactory.cpp  StateMachine.cpp  StateManager.cpp
entities/: Entity.cpp  EntityContext.cpp  Rectangle.cpp  Typography.cpp  base.hpp  full.hpp
game-states/: BaseState.cpp  ExampleState.cpp  StateFactory.cpp  StateManager.cpp  base.hpp  full.hpp
game-states/gameplay/: GameState.cpp  gameplay.hpp
game-states/intro/: IntroState.cpp  intro.hpp
game-states/menu/: MenuState.cpp  menu.hpp
include/: ZOFIA
include/core/: config.hpp  core.hpp  logging.hpp  resources.hpp
include/entities/: base.hpp  full.hpp
include/game-states/: base.hpp  full.hpp  gameplay.hpp  intro.hpp  menu.hpp
include/views/: base.hpp  view.hpp
include/world/: base.hpp  full.hpp  spaceship.hpp  widget.hpp  world.hpp
logging/: BaseLogger.cpp  Logging.cpp  StoutLogging.cpp  logging.hpp
menu/: MenuScene.cpp
notes:/: example-code
static/resources/configs/: config.json
views/: BaseView.cpp  Button.cpp  base.hpp  view.hpp
world/: DrawableEntity.cpp  DrawableHolderEntity.cpp  DrawableObject.cpp  Entity.cpp  EntityContext.cpp  HitBoxObject.cpp  IDrawable.cpp  Object.cpp  PositionEntity.cpp  Rectangle.cpp  Speed.cpp  Typography.cpp  world.hpp
world/spaceship/: SpaceShip.cpp
world/util/: Align.cpp  Margin.cpp
world/widget/: BaseView.cpp  BaseViewContext.cpp  Button.cpp  FpsCounter.cpp  MenuStack.cpp
